# docs

./: _quarto.yml  ai_agent.mdx  destinations.mdx  introduction.mdx  introduction.qmd  mint.json  pyproject.toml  quickstart.mdx  setup.mdx
_extensions/mintlify/: _extension.yml  mintlify_writer.lua
concepts/: ai_transforms.mdx  deployment.mdx  enrichment.mdx  metrics.mdx  models.mdx  sources.mdx
extension/: FAQ.mdx  security-and-privacy.mdx
extension/column-level-lineage/: interactions.mdx  introduction.mdx
extension/docs-composer/: generating.mdx  viewing-and-editing.mdx
extension/getting-started/: installation.mdx  prerequisites.mdx  troubleshooting.mdx
guides/: metrics.mdx  models.mdx  sources.mdx
reference/: table.mdx
reference/column/: ArrayFunctions.mdx  MapFunctions.mdx  MathFunctions.mdx  RegexFunctions.mdx  StringFunctions.mdx  StructFunctions.mdx  TemporalFunctions.mdx  URLFunctions.mdx  argmax.mdx  argmin.mdx  array.mdx  as_scalar.mdx  between.mdx  cast.mdx  coalesce.mdx  collect.mdx  combine.mdx  count.mdx  dict.mdx  dt.mdx  equivalent.mdx  first.mdx  hash.mdx  in_.mdx  lag.mdx  last.mdx  lead.mdx  like.mdx  match.mdx  math.mdx  max.mdx  mean.mdx  median.mdx  min.mdx  mode.mdx  nth.mdx  obj.mdx  (+7 more)
scripts/: preview.py  render.py  replace_pre.py  rerun_jupyter.py
security/: on_prem_agent.mdx
showcase/: syntax.ipynb  syntax.mdx  test2.py
snippets/: snippet-intro.mdx
tutorials/: jaffle_shop.mdx  nyc_taxi.mdx  test.mdx
vinyl/: ai_agent.mdx  introduction.mdx  introduction.qmd  sources.mdx
walkthrough/: relations.ipynb  relations.mdx
(+137 files in other folders)
